syntax = "proto3";

package petstore.v3;

import "google/api/annotations.proto";

option go_package = "petstore/gen/petstore/v3;petstorev3";

service PetService {
  rpc UpdatePet(UpdatePetRequest) returns (UpdatePetResponse) {
    option (google.api.http) = {
      put: "/pet"
      body: "*"
    };
  }

  rpc AddPet(AddPetRequest) returns (AddPetResponse) {
    option (google.api.http) = {
      post: "/pet"
      body: "*"
    };
  }

  rpc FindPetsByStatus(FindPetsByStatusRequest) returns (FindPetsByStatusResponse) {
    option (google.api.http) = {get: "/pet/findByStatus"};
  }

  rpc FindPetsByTags(FindPetsByTagsRequest) returns (FindPetsByTagsResponse) {
    option (google.api.http) = {get: "/pet/findByTags"};
  }

  rpc FindPet(FindPetRequest) returns (FindPetResponse) {
    option (google.api.http) = {get: "/pet/{pet_id}"};
  }

  rpc DeletePet(DeletePetRequest) returns (DeletePetResponse) {
    option (google.api.http) = {delete: "/pet/{pet_id}"};
  }
}

message UpdatePetRequest {
  int64 id = 1;
  optional string name = 2;
  optional Category category = 3;
  repeated string photo_urls = 4;
  repeated Tag tags = 5;
  optional string status = 6;
}

message UpdatePetResponse {
  Pet pet = 1;
}

message AddPetRequest {}

message AddPetResponse {
  Pet pet = 1;
}

message FindPetsByStatusRequest {
  optional string status = 1;
}

message FindPetsByStatusResponse {
  repeated Pet pets = 1;
}

message FindPetsByTagsRequest {
  repeated string tags = 1;
}

message FindPetsByTagsResponse {
  repeated Pet pets = 1;
}

message FindPetRequest {
  int64 pet_id = 1;
}

message FindPetResponse {
  Pet pet = 1;
}

message DeletePetRequest {
  int64 pet_id = 1;
}

message DeletePetResponse {}

message Pet {
  int64 id = 1;
  string name = 2;
  Category category = 3;
  repeated string photo_urls = 4;
  repeated Tag tags = 5;
  string status = 6;
}

message Category {
  int64 id = 1;
  string name = 2;
}

message Tag {
  int64 id = 1;
  string name = 2;
}
